[package]
name = "axolotl"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = "0.4.4"
anyhow = "*"
tokio = { version = "1", features = ["full"] }
derive_builder = "0.10.2"
http = "*"
uuid = "0.8"
getrandom = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.0.3"
log = "*"
stderrlog = "0.5.1"
tower-http = { version = "^0.2.1", features = ["trace"] }
tracing-subscriber = "0.3.6"
libmdns = "*"
